# rustpad

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  gui.rs  main.rs
.github/workflows/: release.yml
assets/: rustpad.desktop
packaging/: appimage.sh
testdata/: stress.md  stress10k.md
